[package]
edition = "2021"
name = "lapce-java"
version = "0.0.0"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]
flate2 = { version = "1.0.22" }
tar = { version = "0.4.38", default-features = false }

anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = { git = "https://github.com/panekj/lapce-plugin-rust.git", branch = "volt" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
